CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(AGZ-SMAA)

############## options

OPTION(AGZ_SMAA_BUILD_EXAMPLE "build example application" OFF)

############## cmake

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release" CACHE STRING
			"options: Debug Release RelWithDebInfo MinSizeRel" FORCE)
ENDIF()

############## library

ADD_LIBRARY(AGZSMAA INTERFACE)

TARGET_INCLUDE_DIRECTORIES(AGZSMAA INTERFACE "${PROJECT_SOURCE_DIR}/include")

############## example

IF(AGZ_SMAA_BUILD_EXAMPLE)
	ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/example")
ENDIF()
