SET(AGZ_ENABLE_D3D11 ON)

ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/example/lib/agz-utils")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/example/lib/DirectXTK")

TARGET_COMPILE_DEFINITIONS(AGZUtils PUBLIC _UNICODE)

SET(AGZ_SMAA_EXAMPLE_SRC
	"${PROJECT_SOURCE_DIR}/example/src/main.cpp")

ADD_EXECUTABLE(AGZSMAAExample ${AGZ_SMAA_EXAMPLE_SRC})

TARGET_LINK_LIBRARIES(
	AGZSMAAExample PUBLIC AGZUtils AGZSMAA DirectXTK runtimeobject.lib)

SET_PROPERTY(TARGET AGZSMAAExample PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET AGZSMAAExample PROPERTY CXX_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET AGZSMAAExample
    PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/example")
